tests/tooling/fixtures/native/recovery/negative/negative_global_const_reference_function_initializer.objc3
// Expected diagnostic code(s): O3S210.
module NegativeGlobalConstReferenceFunctionInitializer;

fn helper() -> i32 {
  return 1;
}

let value = helper;

fn main() -> i32 {
  return value;
}
